--- a/package.json
+++ b/package.json
@@ -1,27 +1,59 @@
 {
-  "name": "simplenodeserver",
-  "version": "1.0.0",
-  "description": "Simple node server that accepts GET/POST",
-  "main": "index.js",
-  "scripts": {
-    "test": "./node_modules/.bin/mocha --reporter spec"
-  },
+  "name": "nodebootstrap-based-app",
+  "private": true,
+  "description": "",
+  "author": "",
+  "license": "UNLICENSE",
+  "main": "./server.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/martinrp/simplenodeserver.git"
-  },
-  "author": "Martin R P",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/martinrp/simplenodeserver/issues"
+    "url": ""
   },
   "engines": {
-    "node": "5.10.1"
+    "node": ">=0.10.8"
   },
-  "homepage": "https://github.com/martinrp/simplenodeserver#readme",
   "dependencies": {
-    "chai": "3.5.0",
-    "mocha": "2.4.5",
-    "request": "2.72.0"
+    "app-module-path": "^1.0.4",
+    "body-parser": "^1.14.1",
+    "config": "*",
+    "consolidate": "^0.14.0",
+    "express": "^4.11.0",
+    "glob": "^7.0.0",
+    "hbs": "^4.0",
+    "lodash": "^4.3.0",
+    "metalogger": "*",
+    "nodebootstrap-htmlapp": "*",
+    "nodebootstrap-server": "*",
+    "yaml": "*"
+  },
+  "devDependencies": {
+    "after": "^0.8.1",
+    "istanbul": "^0.4.2",
+    "mocha": "^2.1.0",
+    "chai": "^3.5.0",
+    "should": "^8.2.2",
+    "jshint": "^2.5.x",
+    "nock": "^7.2.2",
+    "sinon": "^1.17.3",
+    "supertest": "^1.2.0"
+  },
+  "scripts": {
+    "start": "./bin/start.sh",
+    "dev": "./bin/dev_start.sh",
+    "docker-start": "docker-compose run -d -p 3000 app node server.js",
+    "docker-build": "docker-compose build --force-rm --no-cache --pull",
+    "docker-dev": "docker-compose up -d",
+    "docker-dev-start": "nodemon -L -e js,coffee,jade,handlebars server.js",
+    "docker-clean-up": "npm run docker-stop && npm run docker-build && npm run docker-up",
+    "docker-stop": "docker-compose down && docker-compose rm -f",
+    "docker-restart": "docker-compose restart",
+    "docker-install-package": "docker-compose run app npm install --save",
+    "docker-test": "docker-compose run app npm test",
+    "docker-test-cov": "docker-compose run app npm run test-cov",
+    "logs": "docker-compose logs",
+    "test": "mocha --bail test/ test/acceptance/",
+    "pretest": "jshint lib test",
+    "test-cov": "node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- --reporter dot test/ test/acceptance/",
+    "test-travis": "istanbul cover _mocha --report lcovonly -- test/ test/acceptance/"
   }
 }
