--- a/package.json
+++ b/package.json
@@ -24,18 +24,32 @@
     "metalogger": "*",
     "nodebootstrap-htmlapp": "*",
     "nodebootstrap-server": "*",
+    "react": "15.0.2",
+    "react-dom": "15.0.2",
     "yaml": "*"
   },
   "devDependencies": {
     "after": "^0.8.1",
-    "istanbul": "^0.4.2",
-    "mocha": "^2.1.0",
+    "babel-core": "6.8.0",
+    "babel-loader": "6.2.4",
+    "babel-preset-es2015": "6.6.0",
+    "babel-preset-react": "6.5.0",
+    "babelify": "7.3.0",
     "chai": "^3.5.0",
-    "should": "^8.2.2",
+    "css-loader": "0.23.1",
+    "istanbul": "^0.4.2",
     "jshint": "^2.5.x",
+    "less": "2.6.1",
+    "less-loader": "2.2.3",
+    "mocha": "^2.1.0",
     "nock": "^7.2.2",
+    "react": "15.0.2",
+    "react-dom": "15.0.2",
+    "should": "^8.2.2",
     "sinon": "^1.17.3",
-    "supertest": "^1.2.0"
+    "style-loader": "0.13.1",
+    "supertest": "^1.2.0",
+    "webpack": "1.13.0"
   },
   "scripts": {
     "start": "./bin/start.sh",
