--- a/package.json
+++ b/package.json
@@ -31,20 +31,25 @@
   "devDependencies": {
     "after": "^0.8.1",
     "babel-core": "6.8.0",
+    "babel-jest": "9.0.3",
     "babel-loader": "6.2.4",
+    "babel-polyfill": "6.8.0",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
     "babelify": "7.3.0",
+    "webpack-babel-jest": "*",
     "chai": "^3.5.0",
     "css-loader": "0.23.1",
     "css-loading": "1.4.0",
     "istanbul": "^0.4.2",
+    "jest-cli": "12.0.2",
     "jshint": "^2.5.x",
     "less": "2.6.1",
     "less-loader": "2.2.3",
     "mocha": "^2.1.0",
     "nock": "^7.2.2",
     "react": "15.0.2",
+    "react-addons-test-utils": "~0.14.0",
     "react-dom": "15.0.2",
     "should": "^8.2.2",
     "sinon": "^1.17.3",
@@ -67,8 +72,18 @@
     "docker-test-cov": "docker-compose run app npm run test-cov",
     "logs": "docker-compose logs",
     "test": "mocha --bail test/ test/acceptance/",
+    "test-react": "jest",
     "pretest": "jshint lib test",
     "test-cov": "node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- --reporter dot test/ test/acceptance/",
     "test-travis": "istanbul cover _mocha --report lcovonly -- test/ test/acceptance/"
-  }
+  },
+  "jest": {
+    "unmockedModulePathPatterns": [
+      "<rootDir>/node_modules/react",
+      "<rootDir>/node_modules/react-dom",
+      "<rootDir>/node_modules/react-addons-test-utils"
+    ],
+    "scriptPreprocessor": "<rootDir>/node_modules/webpack-babel-jest",
+    "testFileExtensions": ["es6", "js"],
+    "moduleFileExtensions": ["js", "json", "es6"]  }
 }
